corection du fichier securityConfig pour autoriser les url configurer comme variable d'environement dans le fichier webConfig