@@ -2,6 +2,7 @@ package org.kfokam48.cliniquemanagementbackend.config;
 
 
 import org.kfokam48.cliniquemanagementbackend.service.auth.CustomUserDetailsService;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpStatus;
@@ -16,11 +17,23 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
+import java.util.Arrays;
+
 @Configuration
 @EnableGlobalMethodSecurity(prePostEnabled = true, securedEnabled = true)
 public class SecurityConfig {
 
-
+    @Value("${cors.allowed.origins:*}")
+    private String allowedOrigins;
+    
+    @Value("${cors.allowed.methods:GET,POST,PUT,DELETE,OPTIONS,PATCH}")
+    private String allowedMethods;
+    
+    @Value("${cors.allowed.headers:*}")
+    private String allowedHeaders;
+    
+    @Value("${cors.allow.credentials:true}")
+    private boolean allowCredentials;
 
     private final JwtRequestFillter jwtRequestFilter;
 
@@ -40,10 +53,10 @@ public class SecurityConfig {
                 .cors(cors -> cors
                         .configurationSource(request -> {
                             var corsConfig = new org.springframework.web.cors.CorsConfiguration();
-                            corsConfig.setAllowedOrigins(java.util.List.of("http://localhost:3000", "http://localhost:3001")); // Remplace par l’URL de ton frontend
-                            corsConfig.setAllowedMethods(java.util.List.of("GET", "POST", "PUT","PATCH", "DELETE", "OPTIONS"));
-                            corsConfig.setAllowedHeaders(java.util.List.of("*"));
-                            corsConfig.setAllowCredentials(true);
+                            corsConfig.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+                            corsConfig.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+                            corsConfig.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+                            corsConfig.setAllowCredentials(allowCredentials);
                             return corsConfig;
                         })
                 )
